# reviewkit

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dike-replacement-assessment.md
examples/: sample.md
examples/profiles/employment-contract.lawyer/: instructions.md  profile.toml  profile.yaml  required-clauses.md  risky-clauses.md
examples/profiles/story.teacher/: examples.md  instructions.md  profile.toml  profile.yaml
src/reviewkit/: __init__.py  actions.py  anchors.py  cli.py  context.py  detectors.py  document.py  docx_package.py  effectors.py  homeostat.py  insertions.py  llm.py  markup_purity.py  models.py  parser_docx.py  pipeline.py  plant.py  policy.py  profile.py  prompts.py  renderer_docx.py  reviewer.py  revisions.py  state.py  takt_client.py  takt_reviewer.py  takt_types.py  walker.py
src/reviewkit/adapters/: __init__.py  dike.py
tests/: test_anchors.py  test_cli.py  test_dike_adapter.py  test_docx_package.py  test_framework_core.py  test_insertions.py  test_markup_purity.py  test_parser_docx.py  test_pipeline.py  test_policy.py  test_profile.py  test_prompts.py  test_renderer_docx.py  test_revisions.py  test_takt_integration.py
