[project]
name = "reviewkit"
version = "0.6.0"
description = "Hierarchical human-like document review workflow engine"
readme = "README.md"
authors = [
    { name = "mikolaj92", email = "mikolaj92@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["docx", "llm", "review", "document-review", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
reviewkit = "reviewkit.cli:app"

[project.urls]
Homepage = "https://github.com/mikolaj92/reviewkit"
Repository = "https://github.com/mikolaj92/reviewkit"
Issues = "https://github.com/mikolaj92/reviewkit/issues"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
files = ["src/reviewkit"]
disallow_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true
